# ViennaPDE

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  pde_test.cpp
test/: CMakeLists.txt  plot_test_data.ipynb
test/.ipynb_checkpoints/: plot_test_data-checkpoint.ipynb
test/viennapde/core/: CMakeLists.txt  convol_mat.cpp  convol_mesh.cpp  mesh.cpp  meshb.cpp  scheme.cpp
viennapde/: Doxyfile
viennapde/core/: bmesh.hpp  boundary.hpp  convol.hpp  convol_mat.hpp  convol_mesh.hpp  cord.hpp  elem_op.hpp  mesh.hpp  meshb.hpp  mvarmesh.hpp  scheme.hpp  varmesh.hpp  viennapde_enum.hpp
viennapde/scheme/ode/: RK3order.hpp
viennapde/scheme/pde/: Godunov.hpp  LaxWendroff.hpp  TVDlimiter.hpp  WENO.hpp  edge_value_estimate.hpp  flux_func.hpp  scheme_enum.hpp
viennapde/test/: EXPECT_MESH_EQ.hpp
